syntax = "proto3";
option java_multiple_files = true;

package creditas.fileimporter;

message HelloRequest {
  repeated string names =  1;
}

message HelloResponse {
  string status =  1;
}
service HelloBatchService {
  rpc helloBatch(HelloRequest) returns (HelloResponse);
}